<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VFeeder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome</string>
    <string name="dispense">Dispense</string>
    <string name="read">Read</string>
    <string name="set">Set</string>
    <string name="readD">Read Data</string>
    <string name="setD">Set Data</string>
    <string name="settings">Settings</string>
    <string name="disconnect">Disconnect</string>
    <string name="cageNumber">Cage Number</string>
    <string name="foodLevels">Food Levels</string>
    <string name="temperature">Temperature</string>
    <string name="home">Home</string>
    <string name="waterLevels">Water Levels</string>
    <string name="setTime">Set Time</string>
    <string name="addCages">Add Cages</string>
    <string name="deleteCages">Deactivate Cages</string>
    <string name="eraseData">Erase Data</string>
    <string name="vitulusTech">Vitulus Tech</string>
    <string name="vFeeder">V-Feeder Mobile App</string>
    <string name="connect">Connect</string>
    <string name="eraseWarning">This action only deletes the settings of a cage and the data stored in it. If you wish to delete a cage, go to Settings->Delete Cages. if you wish to proceed, press Erase. To cancel, press Home.</string>
    <string name="erase">Erase</string>
    <string name="deleteCage">Deactivate a Cage</string>
    <string name="warningDC">This is to turn off a cage from operation. You must reactivate it if you wish to operate it. Press Delete to confirm. Press Home to cancel.</string>
    <string name="delete">Delete</string>
    <string name="cageID">Cage ID</string>
    <string name="addButtonTxt">Add</string>
    <string name="selectCage">Select Cage</string>
    <string name="allCages">All cages?</string>
    <string name="noTB">No</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="selectUsername">Select a username</string>
    <string name="selectPassword">Select a password</string>
    <string name="enterEmail">Enter email</string>
    <string name="back">Back</string>
    <string name="sendPassword">Send Password</string>
    <string name="gallons">gallons</string>
    <string name="timeHint">13:45</string>
    <string name="logOut">Log Out</string>
    <string name="cageSettings">Cage Settings</string>
    <string name="applicationSettings">Application Settings</string>
    <string name="siloLevels">Food Silo Levels</string>
    <string name="siloLevel">Silo Level</string>
    <string name="reportButton">Reports</string>
    <string name="reportsTxt">Reports</string>
    <string name="activeCages">Active Cages</string>
    <string name="troughWeightTxt">Trough Weight</string>
    <string name="dispenseData">Dispense Data</string>
    <string name="selectDate">Select Date</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="activeCagesExplanation">This will determine how many cages contained a calf on a given day.</string>
    <string name="compute">Compute</string>
    <string name="numberActive">Number</string>
    <string name="temperatureReport">Temperature Report</string>
    <string name="selectDateTemperature">Select a date</string>
    <string name="temperatureReading">Reading</string>
    <string name="dispenseReport">Dispense Report</string>
    <string name="foodAmount">Food Amount</string>
    <string name="waterAmount">Water Amount</string>
    <string name="dispenseTime">Dispense Time</string>
    <string name="selectTime">Select Time</string>
    <string name="foodWeight">Food Weight</string>
    <string name="deactivate">Deactivate</string>
    <string name="reactivateCages">Reactivate Cages</string>
    <string name="reacitvateACage">Reactivate a Cage</string>
    <string name="reactivateTxt">This is to reactivate a cage so that it operates again. If you wish to continue, press Reactivate.</string>
    <string name="reactivateButton">Reactivate</string>
    <string name="dateFormat">YYYY-MM-DD</string>
    <string name="lengthOfStayTxt">Length of Stay</string>
    <string name="lengthOfStayPrompt">Length of stay</string>
    <string name="resetSettings">Reset</string>
    <string name="pounds">pounds</string>

</resources>
