<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/settingsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/applicationSettings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addCagesB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/addCages" />

    <Button
        android:id="@+id/deleteCagesB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCagesB"
        android:layout_centerHorizontal="true"
        android:text="@string/deleteCages" />

    <Button
        android:id="@+id/eraseDataB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteCagesB"
        android:layout_centerHorizontal="true"
        android:text="@string/eraseData" />

    <Button
        android:id="@+id/homeB"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/settingsTxt"
        android:layout_below="@+id/eraseDataB"
        android:layout_marginTop="89dp"
        android:text="@string/home" />

    <Button
        android:id="@+id/reactivateButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eraseDataB"
        android:layout_centerHorizontal="true"
        android:text="@string/reactivateCages" />

</RelativeLayout>
