<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeScreen" >

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/dispenseB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTxt"
        android:layout_centerHorizontal="true"
        android:text="@string/dispense" />

    <Button
        android:id="@+id/readB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dispenseB"
        android:layout_centerHorizontal="true"
        android:text="@string/readD" />

    <Button
        android:id="@+id/setB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/readB"
        android:layout_centerHorizontal="true"
        android:text="@string/setD" />

    <Button
        android:id="@+id/settingsB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setB"
        android:layout_centerHorizontal="true"
        android:text="@string/settings" />

    <Button
        android:id="@+id/disconnectB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/disconnect" />

</RelativeLayout>
