<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="Logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/reportsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/reportsTxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/activeCagesButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/throughWeightButton"
        android:layout_below="@+id/reportsTxt"
        android:layout_marginTop="15dp"
        android:text="@string/activeCages" />

    <Button
        android:id="@+id/throughWeightButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activeCagesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/troughWeightTxt" />

    <Button
        android:id="@+id/dispenseDataButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/throughWeightButton"
        android:layout_below="@+id/throughWeightButton"
        android:layout_marginTop="11dp"
        android:text="@string/dispenseData" />

    <Button
        android:id="@+id/temperatureButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dispenseDataButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/temperature" />

    <Button
        android:id="@+id/homeButtonReports"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logo"
        android:layout_below="@+id/temperatureButton"
        android:layout_marginTop="48dp"
        android:text="@string/home" />

</RelativeLayout>
