<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

<TextView
    android:id="@+id/setTxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/logo"
    android:layout_centerHorizontal="true"
    android:text="@string/cageSettings"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<EditText
    android:id="@+id/cageNumField1"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/cageNumTxt"
    android:layout_toRightOf="@+id/setTxt"
    android:ems="10"
    android:inputType="number" >

    <requestFocus />
</EditText>

<!--  <TextView
    android:id="@+id/waterLevelsTxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/foodLevelsTxt1"
    android:layout_below="@+id/foodLevelsTxt1"
    android:layout_marginTop="18dp"
    android:text="@string/waterLevels"
    android:textAppearance="?android:attr/textAppearanceMedium" />-->

<EditText
    android:id="@+id/timeEdit"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/setTimeTxt"
    android:layout_alignBottom="@+id/setTimeTxt"
    android:layout_alignLeft="@+id/foodLevelsEdit"
    android:ems="10"
    android:hint="@string/timeHint"
    android:inputType="time" />

<!--  <EditText
    android:id="@+id/waterLevelsEdit"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/waterLevelsTxt"
    android:layout_alignBottom="@+id/waterLevelsTxt"
    android:layout_alignLeft="@+id/timeEdit"
    android:ems="10"
    android:hint="@string/gallons"
    android:inputType="number|numberDecimal" />-->

<TextView
    android:id="@+id/foodLevelsTxt1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/cageNumTxt"
    android:layout_below="@+id/cageNumTxt"
    android:layout_marginTop="29dp"
    android:text="@string/foodLevels"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<Button
    android:id="@+id/homeButtonSet"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="18dp"
    android:text="@string/home" />

<TextView
    android:id="@+id/cageNumTxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/setButton"
    android:layout_below="@+id/setTxt"
    android:layout_marginTop="15dp"
    android:text="@string/cageNumber"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<Button
    android:id="@+id/resetSettingsButton"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_above="@+id/homeButtonSet"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="25dp"
    android:text="@string/resetSettings" />

<Button
    android:id="@+id/setButton"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_above="@+id/resetSettingsButton"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="22dp"
    android:text="@string/set" />

<TextView
    android:id="@+id/setTimeTxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/foodLevelsTxt1"
    android:layout_centerVertical="true"
    android:text="@string/setTime"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText
    android:id="@+id/foodLevelsEdit"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/foodLevelsTxt1"
    android:layout_alignBottom="@+id/foodLevelsTxt1"
    android:layout_alignLeft="@+id/cageNumField1"
    android:ems="10"
    android:hint="@string/pounds"
    android:inputType="number"
    android:maxLength="1" />

</RelativeLayout>
